# caddy-webhook

./: Dockerfile  README.md  build.yaml  config.yml  main.py  pyproject.toml
.github/workflows/: build-and-deploy.yaml  tag-and-setup-release.yml  test-build.yaml  test.yaml
app/: main.py
caddy-webhook/: .dockerignore  Dockerfile  build.yaml  config.yml  pyproject.toml
caddy-webhook/app/: main.py
